--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -3,7 +3,7 @@
 
 entries:
     - title: i am a phd student at the <a href='https://www.ucl.ac.uk/economics/'>department of economics, university college london</a>
-    - title: my curriculum vitae is <a href="https://www.gfrt0.github.io/_content/forte_cv.pdf">here</a>; it contains my email address. 
+    - title: my curriculum vitae is <a href="https://gfrt0.github.io/_content/forte_cv.pdf">here</a>; it contains my email address. 
 
   # - title: all posts
   #   post_list:
