--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -2,10 +2,15 @@
 # https://github.com/riggraz/no-style-please#customize-the-menu
 
 entries:
-    - title: i am a phd student at the <a href='https://www.ucl.ac.uk/economics/'>department of economics, university college london</a>. 
-    - title: my cv is <a href="https://raw.githubusercontent.com/gfrt0/gfrt0.github.io/master/content/forte_cv.pdf">here</a>; 
-    it contains my email address. 
-    - title: i am interested in applied microeconometrics.
+- title: >-
+    phd student in economics @ <a
+    href='https://www.ucl.ac.uk/economics/'>ucl</a> .
+- title: i am interested in applied microeconometrics.
+- title: >-
+    my cv is <a
+    href="https://raw.githubusercontent.com/gfrt0/gfrt0.github.io/master/content/forte_cv.pdf">here</a>;
+    it contains my email address.
+
 
   # - title: all posts
   #   post_list:
