--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: giuseppe forte # name of the site
+title: # name of the site
 author: giuseppe forte # name of site's author
 email: # email of site's author
 url: https://gfrt0.github.io # root address of the site
