--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -2,15 +2,16 @@
 # https://github.com/riggraz/no-style-please#customize-the-menu
 
 entries:
+- title: my name is giuseppe forte. 
 - title: >-
-    phd student in economics @ <a
-    href='https://www.ucl.ac.uk/economics/'>ucl</a> .
+    i am a phd student in economics @ <a
+    href='https://www.ucl.ac.uk/economics/'>ucl</a>.
 - title: i am interested in applied microeconometrics.
 - title: >-
     my cv is <a
     href="https://raw.githubusercontent.com/gfrt0/gfrt0.github.io/master/content/forte_cv.pdf">here</a>;
     it contains my email address.
-
+- title: my github profile is <a href="https://github.com/gfrt0">here</a>;
 
   # - title: all posts
   #   post_list:
