--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -11,7 +11,8 @@ entries:
     my cv is <a
     href="https://raw.githubusercontent.com/gfrt0/gfrt0.github.io/master/content/forte_cv.pdf">here</a>;
     it contains my email address.
-- title: my github profile is <a href="https://github.com/gfrt0">here</a>;
+- title: my github profile is <a href="https://github.com/gfrt0">here</a>.
+- title: feel free to get in touch. 
 
   # - title: all posts
   #   post_list:
