--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -6,7 +6,7 @@ entries:
 - title: >-
     i am a phd student in economics @ <a
     href='https://www.ucl.ac.uk/economics/'>ucl</a>.
-- title: i am interested in applied microeconometrics.
+- title: i mostly work in empirical industrial organisation.
 - title: >-
     my cv is <a
     href="https://raw.githubusercontent.com/gfrt0/gfrt0.github.io/master/content/forte_cv.pdf">here</a>;
