--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -16,6 +16,13 @@ entries:
 - title: my github profile is <a href="https://github.com/gfrt0">here</a>.
 - title: feel free to get in touch. 
 
+- title: research
+    post_list:
+      category: research
+      show_more: true
+      show_more_text: See more posts...
+      show_more_url: research-archive.html
+  
   # - title: all posts
   #   post_list:
   #     limit: 5
