--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -12,15 +12,10 @@ entries:
 - title: >-
     my cv is <a
     href="https://raw.githubusercontent.com/gfrt0/gfrt0.github.io/master/content/forte_cv.pdf">here</a>;
-    it contains my email address and my work.
+    it contains my email address.
+- title: my work is <a href="research">here</a>. 
 - title: my github profile is <a href="https://github.com/gfrt0">here</a>.
 - title: feel free to get in touch.   
-- title: all posts
-  post_list:
-    limit: 5
-    show_more: true
-    show_more_text: See archive...
-    show_more_url: archive.html
 
   # - title: posts by category
   #   post_list:
