--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -9,11 +9,11 @@ entries:
     href='https://ifs.org.uk/'>ifs</a>, and <a
     href='https://www.cemmap.ac.uk/'>cemmap</a>.
 - title: i mostly work in empirical industrial organisation.
+- title: my research is <a href="research">here</a>. 
 - title: >-
     my cv is <a
     href="https://raw.githubusercontent.com/gfrt0/gfrt0.github.io/master/content/forte_cv.pdf">here</a>;
     it contains my email address.
-- title: my work is <a href="research">here</a>. 
 - title: my github profile is <a href="https://github.com/gfrt0">here</a>.
 - title: feel free to get in touch.   
 
