--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -5,7 +5,7 @@ entries:
     href='https://www.ucl.ac.uk/economics/'>ucl</a>, <a
     href='https://ifs.org.uk/'>ifs</a>, and <a
     href='https://www.cemmap.ac.uk/'>cemmap</a>.
-- title: i mostly work in empirical industrial organisation.
+- title: i work in empirical industrial organisation.
 - title: my research is <a href="research">here</a>. 
 - title: >-
     my cv is <a
