--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -2,8 +2,7 @@ entries:
 - title: my name is giuseppe forte. 
 - title: >-
     i am a phd student in economics at <a
-    href='https://www.ucl.ac.uk/economics/'>ucl</a>, <a
-    href='https://ifs.org.uk/'>ifs</a>, and <a
+    href='https://www.ucl.ac.uk/economics/'>ucl</a> and <a
     href='https://www.cemmap.ac.uk/'>cemmap</a>.
 - title: i work in empirical industrial organisation.
 - title: my research is <a href="research">here</a>. 
