--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -4,11 +4,13 @@ entries:
     i am a phd student in economics at <a
     href='https://www.ucl.ac.uk/economics/'>ucl</a> and <a
     href='https://www.cemmap.ac.uk/'>cemmap</a>.
+- title: >-
+    i am visiting href='https://economics.stanford.edu/'>stanford</a> until May 2024.
 - title: i work in empirical industrial organisation.
 - title: my research is <a href="research">here</a>. 
 - title: >-
     my cv is <a
-    href="https://raw.githubusercontent.com/gfrt0/gfrt0.github.io/master/content/forte_cv.pdf">here</a>;
+    href="https://raw.githubusercontent.com/gfrt0/gfrt0.github.io/master/content/forte_cv.pdf">here</a>.
     it contains my email address.
 - title: my github profile is <a href="https://github.com/gfrt0">here</a>.
-- title: feel free to get in touch.   
+- title: feel free to get in touch!
