--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "" # name of the site
+title: "giuseppe forte" # name of the site
 author: giuseppe forte # name of site's author
 email: # email of site's author
 url: https://gfrt0.github.io # root address of the site
@@ -7,7 +7,7 @@ description:
 permalink: /:slug.html
 
 theme_config:
-  appearance: "auto" # can be "light", "dark" or "auto"
+  appearance: "dark" # can be "light", "dark" or "auto"
   back_home_text: ".." # customize text for homepage link in post layout
   date_format: "%Y-%m-%d" # customize how date is formatted
   show_description: false # show blog description in home page
